--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
   <% end %>
 
   <% if user_signed_in? %>
-    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> |
+    <%= link_to 'Profile', profile_path(current_user) %>
   <%else%>
     <%= link_to('Login', new_user_session_path)  %>  
   <%end%>
